--- a/src/scss/shared/_icons.scss
+++ b/src/scss/shared/_icons.scss
@@ -5,4 +5,12 @@
     height: 16px;
     padding-right: 6px;
   }
+
+  @media screen and (max-width: 767px) {
+    a &,
+    button & {
+      width: 12px;
+      height: 12px;
+    }
+  }
 }
